[gd_scene load_steps=13 format=3 uid="uid://dsfeoqaoogy2q"]

[ext_resource type="Script" path="res://Scenes/Components/Enemies/enemy.gd" id="1_itmeb"]
[ext_resource type="Material" uid="uid://c60pj2l6ktqad" path="res://Shaders/Shield_Material.tres" id="2_0qyro"]
[ext_resource type="Texture2D" uid="uid://ct1n3eauj4pyk" path="res://Assets/Images/Sprites/Enemies/Alien05.png" id="2_ayta7"]
[ext_resource type="Texture2D" uid="uid://cxvprt2n6e5iu" path="res://Assets/Images/Textures/light_fade.png" id="4_vedgw"]
[ext_resource type="Texture2D" uid="uid://blga5im05mvyx" path="res://Assets/Images/Textures/moon_light.png" id="5_ebkj5"]
[ext_resource type="Texture2D" uid="uid://cmao8k6fo66w7" path="res://Assets/Images/Sprites/Behavior/exclamation_mark.png" id="5_ix7p6"]
[ext_resource type="Texture2D" uid="uid://hn7ls6wx2l84" path="res://Assets/Images/Sprites/Behavior/question.png" id="6_i5d1j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nb8da"]
radius = 65.9242

[sub_resource type="Animation" id="Animation_57amv"]
resource_name = "Enemy_Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 0.466516, 1.46409),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 0.95), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/DynamicLights/DotLight1:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.5, 5.0, 0.0, 5.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/DynamicLights/DotLight2:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.5, 5.0, 0.0, 5.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/DynamicLights/DotLight3:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.5, 5.0, 0.0, 5.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/DynamicLights/DotLight4:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.5, 5.0, 0.0, 5.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D/DynamicLights/CenterLight:energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 3.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tlcoc"]
_data = {
"Enemy_Idle": SubResource("Animation_57amv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_dwiur"]
radius = 381.084

[sub_resource type="CircleShape2D" id="CircleShape2D_dfk8w"]
radius = 664.091

[node name="Enemy" type="CharacterBody2D" groups=["enemy", "minimap_objects"]]
collision_layer = 2
collision_mask = 8
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_itmeb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nb8da")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tlcoc")
}
autoplay = "Enemy_Idle"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
max_speed = 300.0
debug_enabled = true
debug_path_custom_line_width = 4.0

[node name="RecalculateTimer" type="Timer" parent="NavigationAgent2D"]
wait_time = 0.25
autostart = true

[node name="ActivationZone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationZone"]
shape = SubResource("CircleShape2D_dwiur")
debug_color = Color(0.964706, 0.164706, 0.141176, 0.419608)

[node name="DeactivationZone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeactivationZone"]
position = Vector2(2, 0)
shape = SubResource("CircleShape2D_dfk8w")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = ExtResource("2_0qyro")
position = Vector2(13, 0)
rotation = 1.5708
texture = ExtResource("2_ayta7")

[node name="Shadow" type="Sprite2D" parent="Sprite2D"]
self_modulate = Color(0, 0, 0, 0.615686)
show_behind_parent = true
scale = Vector2(0.35, 0.35)
texture = ExtResource("4_vedgw")

[node name="FixedLights" type="Node2D" parent="Sprite2D"]

[node name="Light1" type="PointLight2D" parent="Sprite2D/FixedLights"]
position = Vector2(8, -43)
color = Color(0, 0.686275, 0.286275, 1)
energy = 2.0
texture = ExtResource("5_ebkj5")
texture_scale = 0.05
height = 10.0

[node name="Light2" type="PointLight2D" parent="Sprite2D/FixedLights"]
position = Vector2(-9, -44)
color = Color(0, 0.686275, 0.286275, 1)
energy = 2.0
texture = ExtResource("5_ebkj5")
texture_scale = 0.05
height = 10.0

[node name="Light3" type="PointLight2D" parent="Sprite2D/FixedLights"]
position = Vector2(-13, 32)
color = Color(0, 0.686275, 0.286275, 1)
energy = 2.0
texture = ExtResource("5_ebkj5")
texture_scale = 0.05
height = 10.0

[node name="Light4" type="PointLight2D" parent="Sprite2D/FixedLights"]
position = Vector2(13, 33)
color = Color(0, 0.686275, 0.286275, 1)
energy = 2.0
texture = ExtResource("5_ebkj5")
texture_scale = 0.05
height = 10.0

[node name="DynamicLights" type="Node2D" parent="Sprite2D"]

[node name="CenterLight" type="PointLight2D" parent="Sprite2D/DynamicLights"]
position = Vector2(4.76837e-07, 13.2708)
scale = Vector2(1.91406, 1.875)
color = Color(0.0117647, 0.501961, 0.282353, 1)
energy = 3.0
texture = ExtResource("5_ebkj5")
texture_scale = 0.05
height = 60.0

[node name="DotLight1" type="PointLight2D" parent="Sprite2D/DynamicLights"]
position = Vector2(14, -16)
rotation = 0.785398
scale = Vector2(2.052, 2)
color = Color(0, 0.34902, 1, 1)
energy = 5.0
texture = ExtResource("5_ebkj5")
texture_scale = 0.01
height = 10.0

[node name="DotLight2" type="PointLight2D" parent="Sprite2D/DynamicLights"]
position = Vector2(23, 16)
rotation = 0.785398
scale = Vector2(2.052, 2)
color = Color(0, 0.34902, 1, 1)
energy = 5.0
texture = ExtResource("5_ebkj5")
texture_scale = 0.01
height = 10.0

[node name="DotLight3" type="PointLight2D" parent="Sprite2D/DynamicLights"]
position = Vector2(-23, 17)
rotation = 0.785398
scale = Vector2(2.052, 2)
color = Color(0, 0.34902, 1, 1)
energy = 5.0
texture = ExtResource("5_ebkj5")
texture_scale = 0.01
height = 10.0

[node name="DotLight4" type="PointLight2D" parent="Sprite2D/DynamicLights"]
position = Vector2(-14, -16)
rotation = 0.785398
scale = Vector2(2.052, 2)
color = Color(0, 0.34902, 1, 1)
energy = 5.0
texture = ExtResource("5_ebkj5")
texture_scale = 0.01
height = 10.0

[node name="RayCast2D" type="RayCast2D" parent="Sprite2D"]
target_position = Vector2(0, -1000)

[node name="UI" type="Node2D" parent="."]
top_level = true

[node name="Chasing" type="Sprite2D" parent="UI"]
visible = false
position = Vector2(0, -110)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_ix7p6")

[node name="Searching" type="Sprite2D" parent="UI"]
visible = false
position = Vector2(0, -110)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_i5d1j")

[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="NavigationAgent2D/RecalculateTimer" to="." method="_on_recalculate_timer_timeout"]
[connection signal="area_entered" from="ActivationZone" to="." method="_on_activation_zone_area_entered"]
[connection signal="area_exited" from="DeactivationZone" to="." method="_on_deactivation_zone_area_exited"]
